lite-logger/log-management/objects/LogEntryArchive__b/LogEntryArchive__b.object-meta.xml
<CustomObject>
    <description>Cold tier: primary long-term store. Big Object storage does not consume standard data storage - the core SMB cost lever. Index leads with Timestamp so retention purges can range-filter on it; TransactionId + TransactionEntryNumber make each row unique.</description>
    <label>Log Entry Archive</label>
    <pluralLabel>Log Entry Archives</pluralLabel>
    <indexes>
        <fullName>LogEntryArchiveIndex</fullName>
        <label>Log Entry Archive Index</label>
        <fields>
            <name>Timestamp__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>TransactionId__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>TransactionEntryNumber__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
    </indexes>
</CustomObject>