lite-logger/log-management/objects/LogEntryArchive__b/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <label>ExceptionMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>