lite-logger/log-management/objects/LogEntryArchive__b/fields/LoggedByUsername__c.field-meta.xml
<CustomField>
    <fullName>LoggedByUsername__c</fullName>
    <label>LoggedByUsername</label>
    <length>255</length>
    <type>Text</type>
</CustomField>