lite-logger/log-management/objects/LogEntryArchive__b/fields/LoggingLevelOrdinal__c.field-meta.xml
<CustomField>
    <fullName>LoggingLevelOrdinal__c</fullName>
    <label>Logging Level Ordinal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>