lite-logger/log-management/objects/LogEntryArchive__b/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>