lite-logger/log-management/objects/LogEntryArchive__b/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>