lite-logger/log-management/objects/LogEntryArchive__b/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <required>true</required>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>