lite-logger/log-management/objects/LogEntryArchive__b/fields/TransactionEntryNumber__c.field-meta.xml
<CustomField>
    <fullName>TransactionEntryNumber__c</fullName>
    <required>true</required>
    <label>Transaction Entry Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>