lite-logger/log-management/objects/LogEntryArchive__b/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <required>true</required>
    <label>Transaction Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>